<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:background="@drawable/bet"
                android:contentDescription="@string/amount_to_bet" />

            <TextView
                android:id="@+id/bet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="17dp"
                android:text="@string/default_bet"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_jackpot"
                android:textStyle="bold" />

            <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="2dp"
            android:orientation="horizontal">


            <ImageButton
                android:id="@+id/minusButton"
                android:layout_width="60dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@drawable/minus1"
                android:contentDescription="@string/decrease_bet" />

            <ImageButton
                android:id="@+id/plusButton"
                android:layout_width="60dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@drawable/add1"
                android:contentDescription="@string/increase_bet" />



        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/layoutw"
        android:layout_width="180dp"
        android:layout_height="130dp"
        android:background="@drawable/play"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toEndOf="@+id/settingLinear"
        app:layout_constraintTop_toTopOf="parent">


        <ImageButton
            android:id="@+id/spinButton"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/spin_wheel" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/settingLinear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >


        <ImageView
            android:id="@+id/settings"
            android:layout_width="75dp"
            android:layout_height="70dp"
            android:background="@drawable/sett"
            android:contentDescription="@string/settings_ui" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>